k8s/client-pod.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: client
  name: client
  namespace: almond
spec:
  replicas: 1
  selector:
    matchLabels:
      run: client
  template:
    metadata:
      labels:
        run: client
    spec:
      containers:
      - image: gcr.io/karkanis-185818/almond-client
        name: client
        ports:
        - containerPort: 80
          protocol: TCP
