k8s/client-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: client-svc
  namespace: almond
spec:
  selector:
    run: client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
